@@ -1,7 +1,6 @@
 package run.halo.app.extension.index;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
@@ -10,13 +9,12 @@ import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static run.halo.app.extension.index.query.IndexViewDataSet.pileForIndexer;
 import static run.halo.app.extension.index.query.QueryFactory.equal;
 
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import org.junit.jupiter.api.Nested;
@@ -52,24 +50,12 @@ class IndexedQueryEngineImplTest {
     private IndexedQueryEngineImpl indexedQueryEngine;
 
     @Test
-    void getIndexEntry() {
-        Map<String, IndexEntry> indexMap = new HashMap<>();
-        assertThatThrownBy(() -> IndexedQueryEngineImpl.getIndexEntry("field1", indexMap))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessage(
-                "No index found for fieldPath: field1, make sure you have created an index for "
-                    + "this field.");
-    }
-
-    @Test
     void retrieve() {
         var spyIndexedQueryEngine = spy(indexedQueryEngine);
         doReturn(List.of("object1", "object2", "object3")).when(spyIndexedQueryEngine)
             .doRetrieve(any(), any(), eq(Sort.unsorted()));
 
         var gvk = GroupVersionKind.fromExtension(DemoExtension.class);
-
-        when(indexerFactory.getIndexer(eq(gvk))).thenReturn(mock(Indexer.class));
 
         var pageRequest = mock(PageRequest.class);
         when(pageRequest.getPageNumber()).thenReturn(1);
@@ -80,8 +66,7 @@ class IndexedQueryEngineImplTest {
         assertThat(result.getItems()).containsExactly("object1", "object2");
         assertThat(result.getTotal()).isEqualTo(3);
 
-        verify(spyIndexedQueryEngine).doRetrieve(any(), any(), eq(Sort.unsorted()));
-        verify(indexerFactory).getIndexer(eq(gvk));
+        verify(spyIndexedQueryEngine).doRetrieve(eq(gvk), any(), eq(Sort.unsorted()));
         verify(pageRequest, times(2)).getPageNumber();
         verify(pageRequest, times(2)).getPageSize();
         verify(pageRequest).getSort();
@@ -95,85 +80,53 @@ class IndexedQueryEngineImplTest {
 
         var gvk = GroupVersionKind.fromExtension(DemoExtension.class);
 
-        when(indexerFactory.getIndexer(eq(gvk))).thenReturn(mock(Indexer.class));
-
-        var result = spyIndexedQueryEngine.retrieveAll(gvk, new ListOptions());
+        var result = spyIndexedQueryEngine.retrieveAll(gvk, new ListOptions(), Sort.unsorted());
         assertThat(result).isEmpty();
 
-        verify(spyIndexedQueryEngine).doRetrieve(any(), any(), eq(Sort.unsorted()));
-        verify(indexerFactory).getIndexer(eq(gvk));
+        verify(spyIndexedQueryEngine).doRetrieve(eq(gvk), any(), eq(Sort.unsorted()));
     }
 
     @Test
     void doRetrieve() {
         var indexer = mock(Indexer.class);
-        var labelEntry = mock(IndexEntry.class);
-        var fieldSlugEntry = mock(IndexEntry.class);
-        var nameEntry = mock(IndexEntry.class);
-        when(indexer.readyIndexesIterator()).thenReturn(
-            List.of(labelEntry, nameEntry, fieldSlugEntry).iterator());
 
-        when(nameEntry.getIndexDescriptor())
-            .thenReturn(new IndexDescriptor(
-                PrimaryKeySpecUtils.primaryKeyIndexSpec(DemoExtension.class)));
-        when(nameEntry.indexedKeys()).thenReturn(Set.of("object1", "object2", "object3"));
+        var gvk = GroupVersionKind.fromExtension(DemoExtension.class);
 
-        when(fieldSlugEntry.getIndexDescriptor())
-            .thenReturn(new IndexDescriptor(new IndexSpec()
-                .setName("slug")
-                .setOrder(IndexSpec.OrderType.ASC)));
-        when((fieldSlugEntry.immutableEntries())).thenReturn(
-            List.of(Map.entry("slug1", "object1"), Map.entry("slug2", "object2")));
+        when(indexerFactory.getIndexer(eq(gvk))).thenReturn(indexer);
 
-        when(labelEntry.getIndexDescriptor())
-            .thenReturn(
-                new IndexDescriptor(LabelIndexSpecUtils.labelIndexSpec(DemoExtension.class)));
-        when(labelEntry.entries()).thenReturn(List.of(
+        pileForIndexer(indexer, PrimaryKeySpecUtils.PRIMARY_INDEX_NAME, List.of(
+            Map.entry("object1", "object1"),
+            Map.entry("object2", "object2"),
+            Map.entry("object3", "object3")
+        ));
+
+        pileForIndexer(indexer, LabelIndexSpecUtils.LABEL_PATH, List.of(
             Map.entry("key1=value1", "object1"),
             Map.entry("key2=value2", "object1"),
             Map.entry("key1=value1", "object2"),
             Map.entry("key2=value2", "object2"),
             Map.entry("key1=value1", "object3")
         ));
+
+        pileForIndexer(indexer, "slug", List.of(
+            Map.entry("slug1", "object1"),
+            Map.entry("slug2", "object2")
+        ));
+
         var listOptions = new ListOptions();
         listOptions.setLabelSelector(LabelSelector.builder()
             .eq("key1", "value1").build());
         listOptions.setFieldSelector(FieldSelector.of(equal("slug", "slug1")));
-        var result = indexedQueryEngine.doRetrieve(indexer, listOptions, Sort.unsorted());
+
+        var result = indexedQueryEngine.doRetrieve(gvk, listOptions, Sort.unsorted());
         assertThat(result).containsExactly("object1");
     }
 
-    @Test
-    void intersection() {
-        var list1 = Arrays.asList(1, 2, 3, 4);
-        var list2 = Arrays.asList(3, 4, 5, 6);
-        var expected = Arrays.asList(3, 4);
-        assertThat(IndexedQueryEngineImpl.intersection(list1, list2)).isEqualTo(expected);
+    @Data
+    @EqualsAndHashCode(callSuper = true)
+    @GVK(group = "test", version = "v1", kind = "demo", plural = "demos", singular = "demo")
+    static class DemoExtension extends AbstractExtension {
 
-        list1 = Arrays.asList(1, 2, 3);
-        list2 = Arrays.asList(4, 5, 6);
-        expected = List.of();
-        assertThat(IndexedQueryEngineImpl.intersection(list1, list2)).isEqualTo(expected);
-
-        list1 = List.of();
-        list2 = Arrays.asList(1, 2, 3);
-        expected = List.of();
-        assertThat(IndexedQueryEngineImpl.intersection(list1, list2)).isEqualTo(expected);
-
-        list1 = Arrays.asList(1, 2, 3);
-        list2 = List.of();
-        expected = List.of();
-        assertThat(IndexedQueryEngineImpl.intersection(list1, list2)).isEqualTo(expected);
-
-        list1 = List.of();
-        list2 = List.of();
-        expected = List.of();
-        assertThat(IndexedQueryEngineImpl.intersection(list1, list2)).isEqualTo(expected);
-
-        list1 = Arrays.asList(1, 2, 2, 3);
-        list2 = Arrays.asList(2, 3, 3, 4);
-        expected = Arrays.asList(2, 3);
-        assertThat(IndexedQueryEngineImpl.intersection(list1, list2)).isEqualTo(expected);
     }
 
     @Nested
@@ -186,10 +139,6 @@ class IndexedQueryEngineImplTest {
         void testRetrieveForLabelMatchers() {
             // Setup mocks
             IndexEntry indexEntryMock = mock(IndexEntry.class);
-            Map<String, IndexEntry> fieldPathEntryMap =
-                Map.of(LabelIndexSpecUtils.LABEL_PATH, indexEntryMock);
-            List<String> allMetadataNames = Arrays.asList("object1", "object2", "object3");
-
             // Setup mock behavior
             when(indexEntryMock.entries())
                 .thenReturn(List.of(Map.entry("key1=value1", "object1"),
@@ -203,23 +152,22 @@ class IndexedQueryEngineImplTest {
 
             List<SelectorMatcher> labelMatchers = Arrays.asList(matcher1, matcher2);
 
-            // Expected results
-            List<String> expected = Arrays.asList("object1", "object2");
-
+            var indexer = mock(Indexer.class);
+            when(indexer.getIndexEntry(eq(LabelIndexSpecUtils.LABEL_PATH)))
+                .thenReturn(indexEntryMock);
+            var nameIndexEntry = mock(IndexEntry.class);
+            when(indexer.getIndexEntry(eq(PrimaryKeySpecUtils.PRIMARY_INDEX_NAME)))
+                .thenReturn(nameIndexEntry);
+            when(nameIndexEntry.entries()).thenReturn(List.of(Map.entry("object1", "object1"),
+                Map.entry("object2", "object2"), Map.entry("object3", "object3")));
             // Test
-            assertThat(indexedQueryEngine.retrieveForLabelMatchers(labelMatchers, fieldPathEntryMap,
-                allMetadataNames))
-                .isEqualTo(expected);
+            assertThat(indexedQueryEngine.retrieveForLabelMatchers(indexer, labelMatchers))
+                .containsSequence("object1", "object2");
         }
 
         @Test
         void testRetrieveForLabelMatchersNoMatch() {
-            // Setup mocks
             IndexEntry indexEntryMock = mock(IndexEntry.class);
-            Map<String, IndexEntry> fieldPathEntryMap =
-                Map.of(LabelIndexSpecUtils.LABEL_PATH, indexEntryMock);
-            List<String> allMetadataNames = Arrays.asList("object1", "object2", "object3");
-
             // Setup mock behavior
             when(indexEntryMock.entries())
                 .thenReturn(List.of(Map.entry("key1=value1", "object1"),
@@ -230,20 +178,17 @@ class IndexedQueryEngineImplTest {
             var matcher1 = EqualityMatcher.equal("key3", "value3");
             List<SelectorMatcher> labelMatchers = List.of(matcher1);
 
-            // Expected results
-            List<String> expected = List.of();
-
+            var indexer = mock(Indexer.class);
+            when(indexer.getIndexEntry(eq(LabelIndexSpecUtils.LABEL_PATH)))
+                .thenReturn(indexEntryMock);
+            var nameIndexEntry = mock(IndexEntry.class);
+            when(indexer.getIndexEntry(eq(PrimaryKeySpecUtils.PRIMARY_INDEX_NAME)))
+                .thenReturn(nameIndexEntry);
+            when(nameIndexEntry.entries()).thenReturn(List.of(Map.entry("object1", "object1"),
+                Map.entry("object2", "object2"), Map.entry("object3", "object3")));
             // Test
-            assertThat(indexedQueryEngine.retrieveForLabelMatchers(labelMatchers, fieldPathEntryMap,
-                allMetadataNames))
-                .isEqualTo(expected);
+            assertThat(
+                indexedQueryEngine.retrieveForLabelMatchers(indexer, labelMatchers)).isEmpty();
         }
-    }
-
-    @Data
-    @EqualsAndHashCode(callSuper = true)
-    @GVK(group = "test", version = "v1", kind = "demo", plural = "demos", singular = "demo")
-    static class DemoExtension extends AbstractExtension {
-
     }
 }
